# style-factory

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  Makefile  README.zh-CN.md  index.d.ts  index.js  index.mjs  package.json  tsconfig.json
.github/workflows/: CI.yml  release.yml  test.yml
__fixtures__/: runCompile.ts
__fixtures__/all/: index.css  index.js  index.min.css  js.css  js.js  output.css  rs.css  rs.js
__fixtures__/calc/: index.css  index.min.css  js.js  output.css  rs.css  rs.js  rust.css
__fixtures__/comment/: index.js  index.min.css  js.css  js.js  output.css  rs.css  rs.js
__fixtures__/empty/: index.js  index.min.css  rs.css  rs.js
__fixtures__/font-face/: index.min.css  js.js  output.css  rs.css  rs.js
__fixtures__/host/: index.css  index.js  index.min.css  js.js  output.css  rs.css  rs.js  rust.css
__fixtures__/import/: index.css  index.js
__fixtures__/import2/: index.css  index.js
__fixtures__/important/: index.css  index.min.css  js.js  rs.css  rs.js  rust.css
__fixtures__/keyframes/: index.js  index.min.css  js.js  rs.css  rs.js
__fixtures__/keyframes-2/: index.js  index.min.css  js.js  output.css  rs.css  rs.js  rust.css
__fixtures__/large/: compile.bench.ts  index.css  index.js  (+7 more)
__test__/: compare.test.ts  index.spec.mjs  minifyCss.spec.ts  minifyCss.ts  runCompare.ts  transformCSS.spec.ts
bench/: index.bench.mjs
src/: compile_css.rs  convert_css.rs  convert_token.rs  css_to_code.rs  js_compile_css.rs  js_transform_css.rs  lib.rs  node_path.rs  options.rs  printer_options.rs  style_factory.rs  transform_css.rs
(+152 files in other folders)
