[package]
edition = "2021"
name = "noyobo_style-factory"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
lightningcss = { version = "1.0.0-alpha.65", features = ["visitor"] }
parcel_selectors = "0.28.1"
lazy-regex = "3.4.1"
lazy_static = "1.5.0"
md-5 = "0.10.6"
indoc = "2.0.6"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
